# 2026spInnovation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  template.tex
configs/: experiment.yaml  models.yaml  personalities.yaml
data/: anchors.json  axis_vectors.npz  seed_topics.yaml  source_coords.jsonl
data/source_texts/: README.md
docs/: experiment_workflow.md  proposal.md  rubrics.md
results/: appendix_cross_personality_20260509.tex  cross_personality_report_20260509.tex  experiment_full_run_report.md  regression_diagnostics.json
results/tables/: coord_reliability.csv  (+26 more)
scripts/: backup_generated_metrics.py  binned_generation_variability.py  build_axis_vectors.py  build_source_corpus.py  calibrate_judge_ttcw.py  create_essay_placeholders.py  fetch_wikisource_essays.py  generate_anchors.py  make_report_assets.py  merge_judge_into_metrics.py  normalize_source_frontmatter.py  plot_scale_inverted_u.py  plot_scale_inverted_u_judge.py  qwen_h_full_analysis.py  qwen_judge_scale_regression.py  qwen_scale_regression.py  recompute_coords.py  repair_essay_frontmatter.py  run_optional_pipeline.py  smoke_offline.py  t3_collapse_risk.py  t3_surprise_regression.py  trim_long_essays.py  validate_coords.py  write_appendix_robustness.py
src/: __init__.py  analyze.py  baselines.py  config_loader.py  conflict.py  coord_reliability.py  corpus.py  embedding_space.py  generator.py  hf_device.py  info_theory.py  io_utils.py  judge.py  mechanism.py  multi_hop.py  personalities.py  progress_util.py  rewrite.py  run_experiment.py  t3_pooled_t3_loader.py  text_style_coords.py
(+98 files in other folders)
